Added more docs
